--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,6 +1,36 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li class="list-group-item">Krillin - 500</li>
-  <li class="list-group-item">Goku - 10,000</li>
+  <li
+    *ngFor="
+      let character of characterList;
+      let i = index;
+      let isFirst = first;
+      let isLast = last;
+      let isEven = even;
+      let isOdd = odd;
+      let count = count;"
+    class="list-group-item d-flex justify-content-between align-items-center"
+    [ngClass]="{
+      'list-group-item-dark': isLast,
+      'list-group-item-primary': isEven,
+      'list-group-item-alert': isOdd,
+    }">
+
+    <div>
+      <span class="text-primary">{{ i + 1 }}. </span>
+      <span>{{ character.name }} - </span>
+      <strong>Power: </strong>
+      <span>{{ character.power }} </span>
+    </div>
+
+    <button class="btn btn-danger" (click)="onDeleteCharacter( character.id )">X</button>
+
+    <!-- <span>Is First? {{ isFirst}} </span>
+    <span>Is Last? {{ isLast}} </span>
+    <span>Is Even? {{ isEven}} </span>
+    <span>Is Odd? {{ isOdd}} </span>
+    <span>{{ i + 1 }} de {{ count }}</span> -->
+
+  </li>
 </ul>
 
